welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:2: error: not found: value negatif
	if (negatif){
            ^